bidding and reporting

--- a/public/styles/colors.scss
+++ b/public/styles/colors.scss
@@ -33,3 +33,13 @@ $placed-color: #b39ddb;
 $replied-color: #90caf9;
 $accepted-color: #a5d6a7;
 $rejected-color: #ef9a9a;
+
+
+// JOB STATUS COLORS
+$new-job: #D7CCC8;
+$ip-job: #B2EBF2;
+$delivered-job: #C8E6C9;
+$paid-job: #A5D6A7;
+$completed-job: #81C784;
+$disputed-job: #E57373;
+$cancelled-job: #EF9A9A;
