--- a/src/styles.scss
+++ b/src/styles.scss
@@ -242,7 +242,9 @@ body {
         align-items: center;
 
         img {
-            width: 100%;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
         }
 
         .last-message {
@@ -297,6 +299,7 @@ body {
                 height: 40px;
                 width: 40px;
                 margin-right: 20px;
+                border-radius: 50%;
             }
         }
     }
@@ -309,8 +312,9 @@ body {
         .messages-wrapper {
             padding: 10px;
             width: 100%;
-            max-height: 100%;
+            max-height: 90%;
             overflow-y: scroll;
+            margin-bottom: 10px;
 
             .single-message {
                 padding: 10px 15px;
@@ -543,6 +547,45 @@ body {
 
     a {
         text-decoration: none;
+    }
+}
+
+.reported-items-component {
+    p {
+        margin: 0;
+    }
+
+    .report-card {
+        padding: 20px;
+    }
+
+    .report-status-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    p.report-status {
+        padding: 5px 15px;
+        background: #ff7676;
+        border-radius: 15px;
+        color: white;
+        font-weight: bold;
+    }
+
+    p.reported-by {
+        font-size: small;
+        color: grey;
+        font-weight: bold;
+    }
+
+    p.report-reason {
+        margin-top: 20px;
+    }
+
+    p.post-title {
+        font-weight: bold;
+        font-size: large;
     }
 }
 
