--- a/public/styles/colors.scss
+++ b/public/styles/colors.scss
@@ -43,3 +43,9 @@ $paid-job: #A5D6A7;
 $completed-job: #81C784;
 $disputed-job: #E57373;
 $cancelled-job: #EF9A9A;
+
+
+// REPORT STATUS COLORS
+$report-cleared: #81c784;
+$report-deactivated: #e57373;
+$report-reported: #ba68c8;
