--- a/public/styles/colors.scss
+++ b/public/styles/colors.scss
@@ -5,6 +5,8 @@ $question-color-light: #a5d6a7;
 $question-color-dark: #55cf59;
 $resource-color-light: #d1c4e9;
 $resource-color-dark: #aa87eb;
+$ask-resource-color-light: #9fa8da;
+$ask-resource-color-dark: #7986cb;
 
 $admin-type: #a5d6a7;
 $admin-type-dark: #4caf50;
